--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/nivo-slider/arfaian/slideshow_test.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/nivo-slider/arfaian/slideshow_test.htm
@@ -16,17 +16,17 @@
 
         <div class="slider-wrapper theme-default">
             <div id="slider" class="nivoSlider">
-                <a href="http://www.arfaian.com/default.aspx?ArtNr=10753"><img src="images/10753.jpg" data-thumb="images/10753.jpg" alt="" title="PRO’S PRO ELECTRONIC P-501°"/></a>
-                <a href="http://www.arfaian.com/default.aspx?ArtNr=10527"><img src="images/10527.jpg" data-thumb="images/10527.jpg" alt="" title="PRO'S PRO TROLLEY-SET, 3-teilig" /></a>
-                <a href="http://www.arfaian.com/default.aspx?ArtNr=10294"><img src="images/10294.jpg" data-thumb="images/10294.jpg" alt="" title="Pro's Pro Electronic SX-01°" data-transition="slideInLeft" /></a>
-                <a href="http://www.arfaian.com/default.aspx?ArtNr=10164"><img src="images/10164.jpg" data-thumb="images/10164.jpg" alt="" title="#htmlcaption10164" /></a>
+                <a href="http://www.arfaian.com/default.aspx?ArtNr=10753" target=_parent><img src="images/10753.jpg" data-thumb="images/10753.jpg" alt="" title="PRO’S PRO ELECTRONIC P-501°"/></a>
+                <a href="http://www.arfaian.com/default.aspx?ArtNr=10527" target=_parent><img src="images/10527.jpg" data-thumb="images/10527.jpg" alt="" title="PRO'S PRO TROLLEY-SET, 3-teilig" /></a>
+                <a href="http://www.arfaian.com/default.aspx?ArtNr=10294" target=_parent><img src="images/10294.jpg" data-thumb="images/10294.jpg" alt="" title="Pro's Pro Electronic SX-01°" data-transition="slideInLeft" /></a>
+                <a href="http://www.arfaian.com/default.aspx?ArtNr=10164" target=_parent><img src="images/10164.jpg" data-thumb="images/10164.jpg" alt="" title="#htmlcaption10164" /></a>
             </div>
             <div id="htmlcaption" class="nivo-html-caption">
                 <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>. 
             </div>
 
             <div id="htmlcaption10164" class="nivo-html-caption">
-                <strong>Pro's Pro Tennisrucksack rot/silber <a href="http://www.arfaian.com/default.aspx?ArtNr=10164">show me</a>. 
+                <strong>Pro's Pro Tennisrucksack rot/silber <a target=_parent href="http://www.arfaian.com/default.aspx?ArtNr=10164">show me</a>. 
             </div>
         </div>
 
